--- a/NationalSymposium/ns/submission-guidelines.html
+++ b/NationalSymposium/ns/submission-guidelines.html
@@ -16,7 +16,8 @@
         <div class="container">
             <div class="row justify-content-center align-items-lg-center mobile--bg py-2 py-md-3">
                 <div class="col-8 col-md-6 col-lg-5">
-                    <a href="index.html" class="logo"><img src="../images/logo.png" alt="logo"></a> 
+                    <a href="../index.html" class="logo">
+                    <img src="../images/logo.png" alt="logo"></a> 
                 </div> 
                 <div class="col-4 col-md-6 col-lg-7 text-end"> 
                     <div class="top-sidebar">
