faq-heading-changes-registrations-ui-changes-10012024

--- a/NationalSymposium/ns/faq.html
+++ b/NationalSymposium/ns/faq.html
@@ -51,7 +51,7 @@
         <section class="banner">
             <div class="row justify-content-center">
                 <div class="col-11 col-md-12 col-lg-12 text-center">
-                    <h2>National Symposium on Safe Water &amp; Chlorination Initiatives</h2>
+                    <h2>National Symposium on Safe Water &amp; Disinfection Chlorination Initiatives</h2>
                 </div>
                 <div class="col-11 col-md-8 col-lg-6">  
                     <ul>
